# tt-mlir

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
docs/src/: adding-an-op.md  tt-explorer-api.md  ttrt.md
env/: CMakeLists.txt
include/ttmlir/Dialect/TT/IR/: TTOpsTypes.td
include/ttmlir/Dialect/TTIR/Analysis/: GridAnalysis.h  TTIRAnalysis.h
include/ttmlir/Dialect/TTIR/IR/: TTIROps.td
lib/CAPI/: CMakeLists.txt
lib/Dialect/TT/IR/: TTOpsTypes.cpp
lib/Dialect/TTIR/Analysis/: GridAnalysis.cpp
lib/Dialect/TTIR/IR/: TTIROps.cpp
lib/Dialect/TTIR/Transforms/: Passes.cpp
lib/Dialect/TTMetal/Transforms/: KernelsToCpp.cpp  Passes.cpp  SerializeToBinary.cpp
lib/Dialect/TTNN/IR/: TTNNOps.cpp
lib/Dialect/TTNN/Transforms/: Passes.cpp  SerializeToBinary.cpp
python/: TTModule.cpp
runtime/include/tt/runtime/: runtime.h  types.h
runtime/lib/: CMakeLists.txt  binary.cpp  runtime.cpp
runtime/lib/binary/: binary.cpp
runtime/lib/ttmetal/: command_queue.cpp  runtime.cpp
runtime/lib/ttnn/: program.cpp  runtime.cpp
runtime/test/ttnn/: test_subtract.cpp
runtime/tools/python/: setup.py
runtime/tools/python/ttrt/: __init__.py
test/ttmlir/Dialect/TTNN/: simple_matmul.mlir  simple_multiply_system_desc.mlir
test/ttmlir/Silicon/: multiple_add_with_loc.mlir  multiple_add_with_loc_grid_override.mlir  simple_ge.mlir  simple_matmul.mlir  simple_multiply.mlir  simple_relu.mlir  simple_subtract.mlir  simple_sum.mlir  ttir_to_ttnn_pipeline.mlir  ttir_to_ttnn_pipeline_custom_opt.mlir
test/ttmlir/Silicon/TTMetal/: to_layout.mlir
(+3 files in other folders)
